fix: stretched battle end container; allow scroll on end loot

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7859,6 +7859,7 @@ table.astralForgeShards td {
     padding: 2em;
     width: 650px;
     min-height: 850px;
+    max-height: 850px;
 
     margin-top: 6em;
 
@@ -8030,6 +8031,8 @@ table.astralForgeShards td {
 
 .battleEnd-loot {
     grid-area: battleEnd-loot;
+
+    overflow-y: scroll;
 }
 .battleEnd-loot .battleEnd-loot-single {
     width: 95%;
